--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Michael's Blog
-email: michael@theroboticshub.com
+#email: michael@theroboticshub.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is my personal blog where I write about robotics, programming, and other things that interest me.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: jekyllrb
+github_username:  michaelharries
 
 # Build settings
 theme: minima
