--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is my personal blog where I write about culture, innovation, robotics, programming, and other things that interest me.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+author: Michael Harries
 twitter_username: michaelharries
 github_username:  michaelharries
-linkedin_username: michaelharries
 
 # Build settings
 theme: minima
