--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,12 @@
 
 title: Michael's Blog
 description: >- # this means to ignore newlines until "baseurl:"
-  This is my personal blog where I write about culture, innovation, robotics, programming, and other things that interest me.
+  Personal blog where I write about culture, innovation, robotics, AI, and 
+  other miscellanea. Posts are likely to be updated from time to time as I learn more.
+  
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 author: Michael Harries
-#twitter_username: michaelharries
 github_username:  michaelharries
 linkedin_username: michaelharries
 
